2007-07-21 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b94

 * Fix: Return from login/logout was broken.

 * Fix: Removed debug code in login.php

 * Fix: Make register button a popup to work correct.

 * Change: Some Layout nicify.

2007-07-21 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b93

 * CHANGE: Consolidate code for album commmands !!
		   - All code now in getAlbumCommands()
		   - New js function 'jopen' that handles popups and urls
		
 * Change: getItemActions() now only returns the options.

2007-07-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b92

 * Fix: Avoid js errors when clicking on arrow key for a button that
        actually does not exist.

2007-07-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b91

 * CHANGE: Created function getRootAlbumCommands()
		   Removed layout/adminAlbumCommands.inc

 * Chane: Added rootalbum commands in matrix theme.

 * Fix: Correct use for zero case in some gTranslate calls.

 * New: Added requirement 'votingOn' to surpress non working options.

 * HTML nicify at various places.

2007-07-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b90

 * Fix: Added more attributes that should be igonred in drawSelect2()

 * Fix: Better handling for options with no value.

 * Fix: Removed 'disabled' from options with no value.
	    Opera does not select a disabled option :-(

 * Fix: truncateText was broken for 'right'

 * Fix: Link on donation button was wrong.
	    (I hope have not lost M$ll$ons *g*)
 
2007-07-15 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b89

 * Change: Updated PEARs Mail/mimePart.php

2007-07-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b88

 * Fix: Forget the % from the b84 width change ;-)

2007-07-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b87

 * Fix: Show item options in thumbview only when more then 2 options are there.

2007-07-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b86

 * Fix: Urlencode return url in login.php

 * Change: Use same alignment as the thumbcell for the thumn desc.
