@@ -112,6 +112,10 @@ div.g-navbar-top td, div.g-navbar-bottom td, div.g-microthumbnavbar-top td, div.
     padding: 0 10px;
 }
 
+table.g-nav-pages {
+    margin: 0 auto;
+}
+
 table.g-nav-pages td {
      padding: 0;
 }
